style: fix overflow for event details page using tailwind

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,9 +53,6 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-body {
-  overflow-x: hidden;
-}
 
 #custom-width a {
   display: block;
